
    HADOOP-10774. Update KerberosTestUtils for hadoop-auth tests when using
    IBM Java (sangamesh via aw)

    HADOOP-11653. shellprofiles should require .sh extension
    (Brahma Reddy Battula via aw)

    HADOOP-11668. hadoop-daemons.sh bw compat broke with --slaves change
    (Vinayakumar B via aw)

    HADOOP-11703. git should ignore .DS_Store files on Mac OS X (Abin Shahab
    via aw)

  OPTIMIZATIONS

    HADOOP-7761. Improve the performance of raw comparisons. (todd)

    HADOOP-8589. ViewFs tests fail when tests and home dirs are nested (sanjay Radia)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-11226. Add a configuration to set ipc.Client's traffic class with
    IPTOS_LOWDELAY|IPTOS_RELIABILITY. (Gopal V via ozawa)

    HADOOP-9477. Add posixGroups support for LDAP groups mapping service.
    (Dapeng Sun via Yongjun Zhang)

  IMPROVEMENTS

    HADOOP-11719. [Fsshell] Remove bin/hadoop reference from
    GenericOptionsParser default help text.
    (Brahma Reddy Battula via harsh)

    HADOOP-11692. Improve authentication failure WARN message to avoid user
    confusion. (Yongjun Zhang)

    HADOOP-11659. o.a.h.fs.FileSystem.Cache#remove should use a single hash map
    lookup. (Brahma Reddy Battula via aajisaka)

    HADOOP-11709. Time.NANOSECONDS_PER_MILLISECOND - use class-level final
    constant instead of method variable (Ajith S via ozawa)

    HADOOP-11447. Add a more meaningful toString method to SampleStat and 
    MutableStat. (kasha)

    HADOOP-11737. mockito's version in hadoop-nfs’ pom.xml shouldn't be
    specified. (Kengo Seki via ozawa)

    HADOOP-11741. Add LOG.isDebugEnabled() guard for some LOG.debug().
    (Walter Su via ozawa)

    HADOOP-11660. Add support for hardware crc of HDFS checksums on ARM aarch64
    architecture (Edward Nevill via Colin P. McCabe)

    HADOOP-9805. Refactor RawLocalFileSystem#rename for improved testability.
    (Jean-Pierre Matsumoto via cnauroth)

  OPTIMIZATIONS
