@@ -30,6 +30,26 @@ except ImportError:
 releaseVersion={}
 namePattern = re.compile(r' \([0-9]+\)')
 
+asflicense='''
+<!---
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+-->
+'''
+
 def clean(str):
   return tableclean(re.sub(namePattern, "", str))
 
@@ -356,6 +376,9 @@ def main():
     choutputs = Outputs("%(ver)s/CHANGES.%(ver)s.md",
       "%(ver)s/CHANGES.%(key)s.%(ver)s.md",
       ["HADOOP","HDFS","MAPREDUCE","YARN"], {"ver":maxVersion, "date":reldate})
+
+  reloutputs.writeAll(asflicense)
+  choutputs.writeAll(asflicense)
 
   relhead = '# Hadoop %(key)s %(ver)s Release Notes\n\n' \
     'These release notes cover new developer and user-facing incompatibilities, features, and major improvements.\n\n'
